# economy

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  economy.code-workspace  package-lock.json
api/: .Dockerignore  Dockerfile  Makefile  Procfile  README.md  alembic.ini  app.py  config.py  docker.env  generate_crud.py  generate_routers.py  main.py  pyproject.toml  requirements.txt
api/alembic/: alembic.ini  env.py  test_connection.py
api/core/: security.py
api/db/: database.py  economy.db  test_connection.py  users_seed.py
api/di/: __init__.py  container.py
api/logs/: README.md  app.log.2026-03-31  app.log.2026-04-01  app.log.2026-04-02  app.log.2026-04-04  app.log.2026-04-05  app.log.2026-04-07  app.log.2026-04-08  app.log.2026-04-09  app.log.2026-04-10
api/models/: __init__.py  models.py  user.ts
api/repositories/: account_repository.py  bank_repository.py  base_repository.py  category_rule_repository.py  expense_category_repository.py  expense_repository.py  financial_summary_repository.py  household_member_repository.py  household_repository.py  income_category_repository.py  income_repository.py  investment_category_repository.py  investment_log_repository.py  investment_repository.py  saving_log_repository.py  saving_repository.py  source_repository.py  user_repository.py
api/routers/: __init__.py  account_router.py  bank_router.py  category_rules_router.py  expense_category_router.py  expense_router.py  financial_summary_router.py  household_member_router.py  household_router.py  income_category_router.py  (+10 more)
(+724 files in other folders)
