[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-babel>=4.0.0",
    "gunicorn>=23.0.0",
    "pydantic[email]>=2.11.3",
    "sqlalchemy>=2.0.40",
]
